crawler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crawler-service
spec:
  selector:
    app: synergychat-crawler
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30081
  type: NodePort
